--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,8 @@ header{
   margin: 0px 10%;
 }
 .topImage{
-  width: 100%;
+  /*width: 100%;*/
+  width: auto;
 }
 .topText{
   /*font-family : Bodoni 72;*/
