--- a/css/main.css
+++ b/css/main.css
@@ -404,13 +404,53 @@ footer{
   color : rgb(35, 24, 21);
 }
 
-.movie {
-    overflow-x: scroll;
-    white-space: nowrap;
+
+
+
+
+
+
+.slick01 {
+    background-color: #e6e6e6;
+    padding: 50px 0;
 }
-.item {
-    display: inline-block;
+
+button{
+    margin: 0;
+    padding: 0;
+    background: none;
+    border: none;
+    border-radius: 0;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
+.slide-arrow{
+    position: absolute;
+    top: 50%;
+    margin-top: -15px;
+}
+.prev-arrow{
+  left: -40px;
+  width: 0;
+  height: 0;
+  border-left: 0 solid transparent;
+  border-right: 15px solid #113463;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+.next-arrow{
+  right: -40px;
+  width: 0;
+  height: 0;
+  border-right: 0 solid transparent;
+  border-left: 15px solid #113463;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+
+
 
 /*タブレット向け*/
 @media screen and (max-width: 1024px){
