--- a/css/main.css
+++ b/css/main.css
@@ -403,18 +403,44 @@ footer{
   color : #231815;
   color : rgb(35, 24, 21);
 }
-
-
-
-
-
-
-
-.slick01 {
-    background-color: #e6e6e6;
-    padding: 50px 0;
+.movie1 {
+    background: #fff;
+      overflow: hidden;
 }
 
+.movie {
+    max-width: 100%;
+      margin: 0 auto;
+      padding: 30px 0;
+}
+.slick01 {
+    background-color: #e6e6e6;
+    padding: 5% 0;
+}
+
+.item {
+    position: relative;
+    width: 90%;
+    padding-top: 50.625%;
+    margin: 0 auto;
+}
+.item iframe {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.slick-prev:before, .slick-next:before {
+    color: #000 !important;/*黒にする*/
+    opacity: 1;/*デフォルトは.75が指定されている*/
+}
+
+.slick01 .slick-list {
+    overflow: visible !important;
+}
+/*
 button{
     margin: 0;
     padding: 0;
@@ -425,33 +451,41 @@ button{
     -webkit-appearance: none;
     -moz-appearance: none;
 }
+.slick-dots{
+    bottom: 10px !important;
+}
+.slick-dots li{
+    width:30px !important;
+}
+/*ドットのサイズ*/
+/*
+.slick-dots li button:before{
+    font-size:30px !important;/*初期値は6px*/
+/*
+}
 .slide-arrow{
     position: absolute;
     top: 50%;
-    margin-top: -15px;
 }
 .prev-arrow{
   left: -40px;
   width: 0;
   height: 0;
   border-left: 0 solid transparent;
-  border-right: 15px solid #113463;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
+  border-right: 30px solid rgb(131, 0, 9);
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
 }
 .next-arrow{
   right: -40px;
   width: 0;
   height: 0;
   border-right: 0 solid transparent;
-  border-left: 15px solid #113463;
+  border-left: 15px solid rgb(131, 0, 9);
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
-
-
-
-
+*/
 /*タブレット向け*/
 @media screen and (max-width: 1024px){
   .footerUl{
