--- a/css/main.css
+++ b/css/main.css
@@ -407,13 +407,14 @@ footer{
 .slick01 {
     background: #e6e6e6;
     padding: 3% 0;
-    margin: 0 auto; */
+    margin: 0 auto 10% !important;
 }
 
 .item {
     position: relative;
     width: 90%;
     padding: 25.32% 0;
+    margin: 0 auto;
 }
 .item iframe {
     position: absolute;
@@ -422,6 +423,21 @@ footer{
     width: 100%;
     height: 100%;
 }
+.twoin1 {
+    display: flex;
+    flex-direction: row;
+    width:100%;
+  }
+  .info {
+    width: 70%;
+  }
+   
+  .info2 {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 700px;
+  }
 
 button{
     margin: 0;
@@ -443,30 +459,7 @@ button{
     color:rgb(131, 0, 9)!important;
 }
 
-.slide-arrow{
-    position: absolute;
-    top: 50%;
-    background: none;
-}
-.prev-arrow{
-  left: -40px;
-  width: 0;
-  height: 0;
-  border-left: 0 solid transparent;
-  border-right: 15px solid rgb(131, 0, 9);
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-}
-.next-arrow{
-  right: -40px;
-  width: 0;
-  height: 0;
-  border-right: 0 solid transparent;
-  border-left: 15px solid rgb(131, 0, 9);
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-}
-*/
+ 
 /*タブレット向け*/
 @media screen and (max-width: 1024px){
   .footerUl{
