--- a/css/main.css
+++ b/css/main.css
@@ -433,10 +433,7 @@ footer{
   }
    
   .info2 {
-    display: flex;
-    flex-direction: column;
     width: 30%;
-    height: 700px;
   }
 
 button{
@@ -470,6 +467,7 @@ button{
   margin: 0;
   padding: 0;
   display: flex;
+  list-style: none;
   align-items: center;
 }
 
@@ -490,9 +488,8 @@ button{
 .listdate {
     flex-basis: calc(20% - 2px)!important;
     text-align:center;
-    list-style: none;
     font-size: 16px;
-    line-height: 32px;
+    line-height: 35px;
     color: rgb(35,24,21);
     box-sizing: border-box;
     vertical-align: middle;
@@ -503,9 +500,8 @@ button{
 .listbun {
     flex-basis: calc(80% - 12px)!important;
     text-align: left;
-    list-style: none;
     font-size: 16px;
-    line-height: 32px;
+    line-height: 35px;
     color: rgb(35,24,21);
     box-sizing: border-box;
     margin: 16px 0 16px 10px;
@@ -525,7 +521,7 @@ button{
 
 .more {
   text-align: center;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .more button {
@@ -539,10 +535,9 @@ button{
   width: 160px;
   border-radius: 20px;
 }
-
-
-
-
+.insta {
+    display: none;
+}
 
 
 
@@ -562,17 +557,41 @@ button{
   .footerUl{
     margin: 0 20%;
   }
+  
+  .list {
+      display: block;
+  }
+  .list li {
+      text-align: center;
+      font-size:14px;
+      line-height: 30px;
+  }
+  .listdate {
+      color: rgb(35,24,21);
+      box-sizing: border-box;
+      margin: 0;
+      vertical-align: middle;
+  }
+  
+  .listbun {
+      color: rgb(35,24,21);
+      box-sizing: border-box !important;
+      margin: 0 20px 30px 20px;
+      vertical-align: middle;
+  }
+  
+  
 }
 
 /* pc画面向け*/
-@media screen and (min-width:700px/*480px*/) {
+@media screen and (min-width:480px) {
   #nav-drawer {
     display:none;
   }
 }
 
 /* スマートフォン向け */
-@media screen and (max-width: 700px/*499px*/ ) {
+@media screen and (max-width: 499px) {
   .main{
     margin:0 15px;
     padding-top: 60px;
@@ -903,52 +922,50 @@ button{
     transform: translateX(0%);/*中身を表示（右へスライド）*/
     box-shadow: 6px 0 25px rgba(0,0,0,.15);
   }
-/*
+  
+  .list {
+      display: block;
+  }
   .list li {
       text-align: center;
-      width: 100%;
       font-size:13px;
       line-height: 1.69231;
-      height: auto;
-      overfllow: hidden;
-      padding: 0;
   }
-  /*
   .listdate {
-      flex-basis: 20%!important;
-      text-align:center;
-      list-style: none;
-      font-size: 16px;
-      line-height: 32px;
-      color: rgb(35,24,21);
-      box-sizing: border-box;
       margin: 0;
       vertical-align: middle;
-      padding: 20px 0;
-      height: auto;
-      overfllow: hidden;
   }
-  /*
+  
   .listbun {
-      flex-basis: 80%!important;
-      text-align: left;
-      list-style: none;
-      font-size: 16px;
-      line-height: 32px;
-      color: rgb(35,24,21);
-      box-sizing: border-box;
-      margin: 0;
-      vertical-align: middle;
-      padding: 20px 0;
-      height: auto;
-      overfllow: hidden;
+      margin: 0 20px 30px 20px;
   }
-  .infoT td{
-    display: block;
+  .twoin1 {
+      display: block;
+      width:100%;
+      
   }
-  .infoT tr{
-    margin: 20px 0px;
+  .info {
+      width: 100%;
+      
   }
-  .infoP p{
-    margin:0px 20px 40px 20px;
- */
+  .info2 {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
+        
+  }
+  .insta {
+        display: block;
+        width: 100%;
+        
+  }
+  .snss {
+        display: block;
+        width: 50%;
+        height: 300px;
+        
+  }
+  
+}
