--- a/css/main.css
+++ b/css/main.css
@@ -964,7 +964,7 @@ button{
   .snss {
         display: flex;
         width: 50%;
-        height: auto;
+        height: 300px;
         
   }
   
