--- a/css/main.css
+++ b/css/main.css
@@ -964,7 +964,15 @@ button{
   }
   .instagram-media {
       max-width: 100%!important;
-      min-width: 100%!important;
+      min-width: 90%!important;
+      border: none!important;
+      margin: 0px 0px 0px 5px!important;
+  }
+  .PrimaryCTA a {
+      color: #860009!important;
+  }
+  .ViewProfileButton {
+      color: #860009!important;
   }
   .snss {
         display: flex;
