--- a/css/main.css
+++ b/css/main.css
@@ -972,7 +972,7 @@ button{
       color: #860009!important;
   }
   .ViewProfileButton {
-      color: #860009!important;
+      background-color: #860009!important;
   }
   .snss {
         display: flex;
