--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,35 @@ footer{
   margin: 0 auto;
 }
 
+/*リニューアル追加分*/
+.twoin1 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+  .info1 {
+    width: 70%;
+  }
+   
+  .info2 {
+    width: 30%;
+  }
+
+button{
+    margin: 0;
+    padding: 0;
+    background: none;
+    border: none;
+    border-radius: 0;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.slick-dots li{
+    width:30px !important;
+}
+/*リニューアル追加分ここまで*/
 /*アバウトページ*/
 .aboutA p{
   font-family : 游明朝体+36ポかな;
@@ -404,52 +433,27 @@ footer{
   color : rgb(35, 24, 21);
 }
 
-.slick01 {
+/*ムービーページ*/
+.movie-list {
     background: #e6e6e6;
     padding: 3% 0;
     margin: 0 auto 10% !important;
 }
 
-.item {
+.movie-item {
     position: relative;
     width: 90%;
     padding: 25.32% 0;
     margin: 0 auto;
 }
-.item iframe {
+.movie-item iframe {
     position: absolute;
     top: 0;
     right: 0;
     width: 100%;
     height: 100%;
 }
-.twoin1 {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
-  .info {
-    width: 70%;
-  }
-   
-  .info2 {
-    width: 30%;
-  }
 
-button{
-    margin: 0;
-    padding: 0;
-    background: none;
-    border: none;
-    border-radius: 0;
-    outline: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-
-.slick-dots li{
-    width:30px !important;
-}
 /*ドットのサイズ*/
 .slick-dots li button:before{
     font-size: 30px !important;/*初期値は6px*/
@@ -457,12 +461,12 @@ button{
 }
 
 
-.container {
+.info1list {
   width: 100%;
   margin: 0 auto;
 }
 
-.list {
+.info1all {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
@@ -471,21 +475,8 @@ button{
   align-items: center;
 }
 
-.list li {
-    /*
-  list-style: none;
-  font-size: 16px;
-  line-height: 32px;
-  color: rgb(35,24,21);
-  box-sizing: border-box;
-  margin: 0;
-  vertical-align: middle;
-  padding: 20px 0;
-  height: auto;
-  overfllow: hidden;
-     */}
 
-.listdate {
+.infodate {
     flex-basis: calc(20% - 2px)!important;
     text-align:center;
     font-size: 16px;
@@ -497,7 +488,7 @@ button{
     padding: 1px;
     overfllow: hidden;
 }
-.listbun {
+.infobun {
     flex-basis: calc(80% - 12px)!important;
     text-align: left;
     font-size: 16px;
@@ -511,7 +502,7 @@ button{
     overfllow: hidden;
 }
 
-.list li.is-hidden {
+.info1all li.is-hidden {
   visibility: hidden;
   opacity: 0;
   height: 0;
@@ -519,12 +510,12 @@ button{
   padding: 0;
 }
 
-.more {
+.motto {
   text-align: center;
   margin-bottom: 20px;
 }
 
-.more button {
+.motto button {
   background-color: rgb(131, 0, 9);
   border: none;
   cursor: pointer;
@@ -554,22 +545,22 @@ button{
     margin: 0 20%;
   }
   
-  .list {
+  .info1all {
       display: block;
   }
-  .list li {
+  .info1all li {
       text-align: center;
       font-size:14px;
       line-height: 30px;
   }
-  .listdate {
+  .infodate {
       color: rgb(35,24,21);
       box-sizing: border-box;
       margin: 0;
       vertical-align: middle;
   }
   
-  .listbun {
+  .infobun {
       color: rgb(35,24,21);
       box-sizing: border-box !important;
       margin: 0 20px 30px 20px;
@@ -919,20 +910,20 @@ button{
     box-shadow: 6px 0 25px rgba(0,0,0,.15);
   }
   
-  .list {
+  .info1all {
       display: block;
   }
-  .list li {
+  .info1all li {
       text-align: center;
       font-size:13px;
       line-height: 1.69231;
   }
-  .listdate {
+  .infodate {
       margin: 0;
       vertical-align: middle;
   }
   
-  .listbun {
+  .infobun {
       margin: 0 20px 30px 20px;
   }
   .twoin1 {
@@ -940,7 +931,7 @@ button{
       width:100%;
       
   }
-  .info {
+  .info1 {
       width: 100%;
       
   }
