--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,7 @@ width: 100%;
   width: calc(100% / 3);
   text-align: center;
 }
-.twitter{
+.x-twitter{
   float: left;
   width: calc(100% / 3);
   text-align: center;
